objects/Invoice_Billing_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Terms__c</fullName>
        <description>Credit Term information from institution</description>
        <formula>Institution__r.c2g__CODADescription1__c &amp;&quot;, calculated as &quot; &amp; TEXT(Institution__r.c2g__CODADaysOffset1__c) &amp; &quot; from &quot; &amp; TEXT(Institution__r.c2g__CODABaseDate1__c)</formula>
        <label>Credit Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Line_Item_Amounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the individual line item amounts will display. If not checked the line items will be &apos;bundled&apos; and only display a total amount on the printed invoice to members.</inlineHelpText>
        <label>Display Line Item Amounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>ABC Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Historical_Linker__c</fullName>
        <description>use this to join between Invoice_Billing_Schedule__c and Line_Item_Schedule__c for the historical transactions.</description>
        <label>Historical Linker</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Billing Schedules</relationshipLabel>
        <relationshipName>Invoice_Billing_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastProcessedDate__c</fullName>
        <label>Last Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Items_Total_Amt__c</fullName>
        <label>Line Items Total Amt</label>
        <summarizedField>Line_Item_Schedule__c.Amount__c</summarizedField>
        <summaryForeignKey>Line_Item_Schedule__c.Invoice_Billing_Schedule_del__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Next_Invoice_Date__c</fullName>
        <label>Next Invoice Date</label>
        <summarizedField>Line_Item_Schedule__c.Invoice_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Line_Item_Schedule__c.Invoiced__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item_Schedule__c.Type__c</field>
            <operation>notContain</operation>
            <value>Risk</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item_Schedule__c.Invoice_Billing_Schedule_del__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Status__c</fullName>
        <formula>IF( Total_Negotiated_Amt__c = Line_Items_Total_Amt__c , &quot;All Amounts Scheduled&quot;,
IF(Total_Negotiated_Amt__c  &gt;  Line_Items_Total_Amt__c, &quot;ALERT: Additional Line Item Amounts Needed&quot;,
IF(Total_Negotiated_Amt__c &lt; Line_Items_Total_Amt__c, &quot;WARNING: Line Items exceed Negotiated Amounts&quot;, &quot; &quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Status Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( Total_Negotiated_Amt__c = Line_Items_Total_Amt__c , IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;All Amounts Scheduled&quot;),
IF(Total_Negotiated_Amt__c &gt; Line_Items_Total_Amt__c, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;ALERT: Additional Line Item Amounts Needed&quot;),
IF(Total_Negotiated_Amt__c &lt; Line_Items_Total_Amt__c, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;WARNING: Line Items exceed Negotiated Amounts&quot;),&quot; &quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Negotiated_Amt__c</fullName>
        <description>Aggregate of all contract Negotiated Amounts</description>
        <label>Total Negotiated Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnbilledLineItems__c</fullName>
        <label>Unbilled Line Items</label>
        <summaryFilterItems>
            <field>Line_Item_Schedule__c.Type__c</field>
            <operation>notEqual</operation>
            <value>Risk Fee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Line_Item_Schedule__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>false</value>
        </summaryFilterItems>
        <summaryForeignKey>Line_Item_Schedule__c.Invoice_Billing_Schedule_del__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Invoice Billing Schedule</label>
    <listViews>
        <fullName>IBS_Negotiated_Amt_exceeds_Line_Item_amt</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Total_Negotiated_Amt__c</columns>
        <columns>Line_Items_Total_Amt__c</columns>
        <columns>UnbilledLineItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Schedule_Status__c</field>
            <operation>startsWith</operation>
            <value>Alert</value>
        </filters>
        <label>IBS Negotiated Amt exceeds Line Item amt</label>
    </listViews>
    <listViews>
        <fullName>IBS_line_items_exceed_Negotiated_Amt</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Total_Negotiated_Amt__c</columns>
        <columns>Line_Items_Total_Amt__c</columns>
        <columns>UnbilledLineItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Schedule_Status__c</field>
            <operation>startsWith</operation>
            <value>Warning</value>
        </filters>
        <label>IBS line items exceed Negotiated Amt</label>
    </listViews>
    <listViews>
        <fullName>IBS_w_All_Items_Billed</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Total_Negotiated_Amt__c</columns>
        <columns>Line_Items_Total_Amt__c</columns>
        <columns>UnbilledLineItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UnbilledLineItems__c</field>
            <operation>equals</operation>
            <value>,0</value>
        </filters>
        <filters>
            <field>Schedule_Status__c</field>
            <operation>equals</operation>
            <value>All Amounts Scheduled</value>
        </filters>
        <filters>
            <field>Total_Negotiated_Amt__c</field>
            <operation>greaterOrEqual</operation>
            <value>USD 1</value>
        </filters>
        <label>IBS w/All Items Billed</label>
    </listViews>
    <listViews>
        <fullName>IBS_w_Unbilled_Line_All_Amts_Scheduled</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Total_Negotiated_Amt__c</columns>
        <columns>Line_Items_Total_Amt__c</columns>
        <columns>UnbilledLineItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UnbilledLineItems__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Schedule_Status__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Institution__c</field>
            <operation>startsWith</operation>
            <value>Madeira</value>
        </filters>
        <label>IBS w/Unbilled Line &amp; All Amts Scheduled</label>
    </listViews>
    <listViews>
        <fullName>IBS_w_Unbilled_Line_Items</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Status__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Total_Negotiated_Amt__c</columns>
        <columns>Line_Items_Total_Amt__c</columns>
        <columns>UnbilledLineItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UnbilledLineItems__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Next_Invoice_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/31/2016</value>
        </filters>
        <label>IBS w/Unbilled Line Items</label>
    </listViews>
    <listViews>
        <fullName>IBS_w_Unbilled_Line_Items1</fullName>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Status__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Total_Negotiated_Amt__c</columns>
        <columns>Line_Items_Total_Amt__c</columns>
        <columns>UnbilledLineItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UnbilledLineItems__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>56681</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>56768</value>
        </filters>
        <label>IBS Specific Unit Search</label>
    </listViews>
    <listViews>
        <fullName>IBS_w_Unbilled_Line_Items_CLN</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Status__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Total_Negotiated_Amt__c</columns>
        <columns>Line_Items_Total_Amt__c</columns>
        <columns>UnbilledLineItems__c</columns>
        <columns>Display_Line_Item_Amounts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Invoice_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>8/4/2016</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>CLN</value>
        </filters>
        <label>IBS w/Unbilled Line Items- CLN</label>
    </listViews>
    <listViews>
        <fullName>IBS_w_Unbilled_Line_Items_DT1</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Status__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Total_Negotiated_Amt__c</columns>
        <columns>Line_Items_Total_Amt__c</columns>
        <columns>UnbilledLineItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Invoice_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>10/31/2016</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>notEqual</operation>
            <value>CLN,SW</value>
        </filters>
        <label>IBS w/Unbilled Line Items- DT</label>
    </listViews>
    <listViews>
        <fullName>IBS_w_Unbilled_Line_Items_JX</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Status__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Total_Negotiated_Amt__c</columns>
        <columns>Line_Items_Total_Amt__c</columns>
        <columns>UnbilledLineItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Invoice_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/31/2016</value>
        </filters>
        <label>IBS w/Unbilled Line Items- JX</label>
    </listViews>
    <listViews>
        <fullName>IBS_w_Unbilled_Line_Items_JX1</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Status__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Total_Negotiated_Amt__c</columns>
        <columns>Line_Items_Total_Amt__c</columns>
        <columns>UnbilledLineItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Invoice_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>11/15/2016</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>notEqual</operation>
            <value>CLN,SW</value>
        </filters>
        <label>IBS w/Unbilled Line Items- JX</label>
    </listViews>
    <listViews>
        <fullName>IBS_w_Unbilled_Line_Items_KS</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Status__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Total_Negotiated_Amt__c</columns>
        <columns>Line_Items_Total_Amt__c</columns>
        <columns>UnbilledLineItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UnbilledLineItems__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>greaterOrEqual</operation>
            <value>65580</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>lessOrEqual</operation>
            <value>65580</value>
        </filters>
        <label>IBS w/Unbilled Line Items- KS</label>
    </listViews>
    <listViews>
        <fullName>IBS_w_Unbilled_Line_Items_KS1</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Status__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Total_Negotiated_Amt__c</columns>
        <columns>Line_Items_Total_Amt__c</columns>
        <columns>UnbilledLineItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Invoice_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>2/15/2016</value>
        </filters>
        <label>IBS w/Unbilled Line Items- KS</label>
    </listViews>
    <listViews>
        <fullName>IBS_w_Unbilled_Line_Items_SW</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Status__c</columns>
        <columns>Schedule_Status__c</columns>
        <columns>Total_Negotiated_Amt__c</columns>
        <columns>Line_Items_Total_Amt__c</columns>
        <columns>UnbilledLineItems__c</columns>
        <columns>Display_Line_Item_Amounts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Invoice_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>11/30/2016</value>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>SW</value>
        </filters>
        <label>IBS w/Unbilled Line Items- SW</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Invoice Billing Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Billing Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>